@@ -15,7 +15,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <java.version>24</java.version>
+        <java.version>21</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -151,7 +151,12 @@
         <dependency>
             <groupId>io.github.beehive-lab</groupId>
             <artifactId>tornado-api</artifactId>
-            <version>2.0.0</version>
+            <version>4.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.beehive-lab</groupId>
+            <artifactId>tornado-runtime</artifactId>
+            <version>4.0.0</version>
         </dependency>
     </dependencies>
 
@@ -163,8 +168,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
                 <configuration>
-                    <source>24</source>
-                    <target>24</target>
+                    <source>21</source>
+                    <target>21</target>
 
                     <compilerArgs>
                         <arg>--enable-preview</arg>
@@ -190,14 +195,48 @@
                 </executions>
             </plugin>
 
-    <plugin>
-      <groupId>org.codehaus.mojo</groupId>
-      <artifactId>exec-maven-plugin</artifactId>
-      <version>3.1.0</version>
-    <configuration>
-        <mainClass>com.stock.analyzer.App</mainClass>
-    </configuration>
-    </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.2</version>
+                <configuration>
+                    <argLine>@C:\Users\NF\tornadovm-4.0.0-opencl\tornado-argfile --enable-preview --enable-native-access=ALL-UNNAMED -Dtornado.sdk.root=C:\Users\NF\tornadovm-4.0.0-opencl -Djava.library.path=C:\Users\NF\tornadovm-4.0.0-opencl\lib</argLine>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <jvmArguments>
+                        @C:\Users\NF\tornadovm-4.0.0-opencl\tornado-argfile --enable-preview --enable-native-access=ALL-UNNAMED -Dtornado.sdk.root=C:\Users\NF\tornadovm-4.0.0-opencl -Djava.library.path=C:\Users\NF\tornadovm-4.0.0-opencl\lib
+                    </jvmArguments>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <mainClass>com.stock.analyzer.App</mainClass>
+                    <arguments>
+                        <argument>@C:\Users\NF\tornadovm-4.0.0-opencl\tornado-argfile</argument>
+                        <argument>--enable-preview</argument>
+                        <argument>--enable-native-access=ALL-UNNAMED</argument>
+                    </arguments>
+                    <systemProperties>
+                        <systemProperty>
+                            <key>tornado.sdk.root</key>
+                            <value>C:\Users\NF\tornadovm-4.0.0-opencl</value>
+                        </systemProperty>
+                        <systemProperty>
+                            <key>java.library.path</key>
+                            <value>C:\Users\NF\tornadovm-4.0.0-opencl\lib</value>
+                        </systemProperty>
+                    </systemProperties>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
